# MAGI_PROJECT

./: .gitignore  README.md  build.gradle  settings.gradle
rtl/: BitonicMerge.sv  BitonicSort.sv  SystolicFIR.sv  TransposeFIR.sv
rtl/AD9361Interface/: AD9361Interface.sv
rtl/ASKDemodulator/: ASKDemodulator.sv
rtl/AsyncClkSwitch/: AsyncClkSwitch.sv
rtl/Axi4Player/: Axi4Player.sv
rtl/Axi4Ram/: Axi4Ram.sv
rtl/Axi4Rom/: Axi4Rom.sv
rtl/Axi4SdramCtrl/: Axi4SdramCtrl.sv
rtl/Axi4VgaCtrl/: Axi4VgaCtrl.sv
rtl/AxiLite4ASKSymbolCounter/: AxiLite4ASKSymbolCounter.sv
rtl/AxiLite4BDMA/: AxiLite4BDMA.sv
rtl/AxiLite4CDMADespread/: AxiLite4CDMADespread.sv
rtl/AxiLite4CDMASpread/: AxiLite4CDMASpread.sv
rtl/AxiLite4CyclicPrefix/: AxiLite4CyclicPrefix.sv
rtl/AxiLite4DDS/: AxiLite4DDS.sv
rtl/AxiLite4Demodulator/: AxiLite4Demodulator.sv
rtl/AxiLite4Gpios/: AxiLite4Gpios.sv
rtl/AxiLite4I2c/: AxiLite4I2cCtrl.sv
rtl/AxiLite4IQDemixer/: AxiLite4IQDemixer.sv
rtl/AxiLite4IQMixer/: AxiLite4IQMixer.sv
rtl/AxiLite4MIMOReceiver/: AxiLite4MIMOReceiver.sv
rtl/AxiLite4MIMOTransmitter/: AxiLite4MIMOTransmitter.sv
rtl/AxiLite4MacEth/: AxiLite4MacEth.sv
rtl/AxiLite4Modulator/: AxiLite4Modulator.sv
rtl/AxiLite4OAMSpinor/: AxiLite4OAMSpinor.sv
rtl/AxiLite4OAMUnspinor/: AxiLite4OAMUnspinor.sv
rtl/AxiLite4Ram/: AxiLite4Ram.sv
rtl/AxiLite4SGDMA/: AxiLite4SGDMA.sv
rtl/AxiLite4SpiMaster/: AxiLite4SpiMaster.sv
rtl/AxiLite4SpiSlave/: AxiLite4SpiSlave.sv
rtl/AxiLite4Timer/: AxiLite4Timer.sv
rtl/AxiLite4Uart/: AxiLite4Uart.sv
rtl/AxiLiter4StreamPkgGen/: AxiLite4PackageGen.sv
rtl/Axil4RTC/: AxiLite4RTC.sv
rtl/BitonicSorter/: BitonicSorter.sv
rtl/BlinkingVgaCtrl/: BlinkingVgaCtrl.sv
rtl/BlockDMA/: BDMACore.sv  BDMAm2s.sv  BDMAs2m.sv  BlockDMACore.sv
rtl/CDMA/: AxiLite4CDMASpreading.sv  CDMA.sv  CDMADespreading.sv  CDMASpreading.sv
rtl/CFOCorrector/: CFOCorrector.sv
rtl/CFOEstimator/: CFOEstimator.sv
rtl/CICFilter/: CICFilter.sv
rtl/ClockDivider/: ClockDivider.sv
rtl/ConvCode/: ConvEncoder.sv
rtl/CordicRotator/: CordicRotator.sv
rtl/DataLastWidthConverter/: StreamFragmentWidthConvert.sv
rtl/DePuncturing/: DePuncturing.sv  MultiDePuncturing.sv
rtl/DemodulatorRTL/: DemodulatorRTL.sv
rtl/DirectFIR/: DirectFIR.sv
rtl/DisplayVgaCtrl/: DisplayVgaCtrl.sv
rtl/GMSKMod/: GMSKMod.sv
rtl/IIR/: IIR_I.sv
rtl/IIR_II_Filter/: IIR_II_Filter.sv
rtl/IIR_I_Filter/: IIR_I_Filter.sv
rtl/JtagAxi4Debugger/: JtagAxi4Debugger.sv
rtl/KalmanFilter/: KalmanFilter.sv
rtl/LMSFilter/: LMSFilter.sv
rtl/LoopListSGDMA/: LoopListSGDMA.sv
rtl/MIMO/: MIMOReceiver.sv  MIMOTransmitter.sv
rtl/ModulatorRTL/: ModulatorRTL.sv
rtl/MultiDePuncturing/: MultiDePuncturing.sv
rtl/MultiPuncturing/: MultiPuncturing.sv
rtl/OAM/: OAMSpinor.sv  OAMUnspinor.sv
rtl/OFDMEqualizer/: OFDMEqualizer.sv
rtl/PhaseRotator/: PhaseRotator.sv
rtl/PowerAdjustor/: PowerAdjustor.sv
rtl/PreambleDetector/: PreambleDetector.sv
rtl/PreambleExtender/: PreambleExtender.sv
rtl/Puncturing/: MultiPuncturing.sv  Puncturing.sv
rtl/R2MDC/: R2MDC.sv
rtl/R2MDC_FFT/: R2MDC_FFT.sv
rtl/RFBenchAD9361/: RFBenchAD9361.sv
rtl/RFBenchIQ/: RFBenchIQ.sv
rtl/RFBenchTX/: TX.sv
rtl/RFBenchTop/: RFBenchTop.sv
rtl/Scrambler/: Scrambler.sv
rtl/StreamMac/: StreamMac.sv
rtl/StreamPkgGen/: StreamPkgGen.sv
rtl/StreamPlayer/: StreamPlayer.sv
rtl/SymbolExtender/: SymbolExtender.sv
rtl/SystolicFIR/: SystolicFIR.sv
rtl/ViterbiDecoder/: ViterbiDecoder.sv
rtl/WidebandAdHocTX/: TX.sv
rtl/ZeroForcing/: MixedDivider.sv  UnsignedDivider.sv  ZeroForcing.sv
script/: ModuleSplit.py
script/ADS/: CMakeLists.txt  README.md
script/ADS/App/DI/: CMakeLists.txt  main.cpp
script/ADS/App/FSR/: CMakeLists.txt  main.cpp
script/ADS/App/FSR/includes/: EASUPass.h  main.h
script/ADS/App/FSR/src/: EASUPass.cpp
script/ADS/App/MAGI_EDITOR/: CMakeLists.txt  main.cpp
script/ADS/App/editor/: CMakeLists.txt  main.cpp
script/ADS/DI/: CMakeLists.txt  main.cpp
script/ADS/cmake_modules/: FindASSIMP.cmake  FindEigen3.cmake  FindGLFW3.cmake  FindGLM.cmake
script/ADS/editor/: CMakeLists.txt
script/ADS/includes/engine/: shader.h  texture.h
script/ADS/resources/shaders/FSR/: EASUPass.vs  FSR.fs  RCASPass.vs
script/ADS/src/engine/: shader.cpp  texture.cpp
simWorkspace/AIS_TX/: test.vcd  verilatorScript.sh
simWorkspace/AsyncClkSwitch/: test.vcd  verilatorScript.sh
simWorkspace/AsyncFIFO/: verilatorScript.sh
simWorkspace/AutoCorrelator/: verilatorScript.sh
simWorkspace/Axi4Ram/: test.vcd  verilatorScript.sh
simWorkspace/Axi4Rom/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4BDMA/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4CDMADespread/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4CDMASpread/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4CDMASpreading/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4CyclicPrefix/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4DDS/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4Demodulator/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4Gpios/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4IQDemixer/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4IQMixer/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4Modulator/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4SGDMA/: test.vcd  verilatorScript.sh
simWorkspace/AxiLite4Timer/: test.vcd  verilatorScript.sh
simWorkspace/BDMAm2s/: test.vcd  verilatorScript.sh
simWorkspace/BDMAs2m/: test.vcd  verilatorScript.sh
simWorkspace/BitonicSort/: test.vcd  verilatorScript.sh
simWorkspace/BitonicSortMDC/: test.vcd  verilatorScript.sh
simWorkspace/BitonicSorter/: test.vcd  verilatorScript.sh
simWorkspace/BlockDMACore/: test.vcd  verilatorScript.sh
simWorkspace/CDMADespreading/: test.vcd  verilatorScript.sh
simWorkspace/CDMASpreading/: test.vcd  verilatorScript.sh
simWorkspace/CFOCorrector/: verilatorScript.sh
simWorkspace/CFOEstimator/: test.vcd  (+1 more)
tcl/: generateIla0.tcl  generateIla1.tcl  generateIla2.tcl  generateIla3.tcl
(+2646 files in other folders)
